<resources>
    <string name="app_name">ProjectXBloodBank</string>
    <string name="no_desc">no_desc</string>
    <string name="dashboard">Dashboard</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="searching_for_blood">Searching For Blood?</string>
    <string name="post_now">Post Now</string>
    <string name="you_last_donated">You Last Donated</string>
    <string name="days_ago">Days Ago</string>
    <string name="people_searching_for">People Searching for</string>
    <string name="peoples">Peoples</string>
    <string name="blood_requests">Blood Requests</string>
    <string name="emergency">Emergency</string>
    <string name="sample_text">Aenean dignissim molestie ligulatempus urna ullamcorper eget. Proin venenatis non elit ac feugiat. Aliquam et nibh quis justo semper tristique vel in nisi. Ut tincidunt enim metus, et consectetur mauris vestibulum in. Donec eu iaculis eros.Maecenas odio lectus, varius id lobortis sit amet, tempor et elit.</string>
    <string name="blood_group">Blood Group</string>
    <string name="activity_log">Activity Log</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="action">Action</string>
    <string name="donations">Donations</string>
    <string name="service_taken">Service Taken</string>
    <string name="_105_days_ago">105 Days Ago</string>
    <string name="blood_req_details">Aenean dignissim molestie ligulatempus urna ullamcorper eget. Proin venenatis non elit ac feugiat. Aliquam et nibh quis justo semper tristique vel in nisi. Ut tincidunt enim metus, et consectetur mauris vestibulum in. Donec eu iaculis eros.Maecenas odio lectus, varius id lobortis sit amet, tempor et elit.</string>
    <string name="call_now">Call Now</string>
    <string name="do_you_want_to_donate">Do You Want To Donate?</string>
    <string name="post_for_blood">Post For Blood</string>
    <string name="write_details">Write Details</string>
    <string name="select_blood_group">Select Blood Group</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="location">Location</string>
    <string name="post">Post</string>
    <string name="blood_request">https://jsonkeeper.com/b/P3UI</string>
    <string name="something_went_wrong">Something went wrong, Try again</string>
    <string name="you_can_donate_now">You Can Donate Now</string>
    <string name="you_cant_donate_now">You Cann\'t Donate Now</string>
    <string name="home">Home</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="rate_us">Rate Us</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>

    <string-array name="blood_groups">

        <item>A(Positive)</item>
        <item>A(Negative)</item>
        <item>B(Positive)</item>
        <item>B(Negative)</item>
        <item>AB(Positive)</item>
        <item>AB(Negative)</item>
        <item>O(Positive)</item>
        <item>O(Negative)</item>

    </string-array>
</resources>