<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bg_color"
    tools:context=".view.fragment.PostForBloodFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="@dimen/_16sdp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/post_for_blood"
                android:textAlignment="textStart"
                android:textColor="@color/black_34"
                android:textSize="@dimen/_12ssp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:gravity="start"
                android:inputType="text|textMultiLine"
                android:padding="@dimen/_14sdp"
                android:hint="@string/write_details"
                android:textSize="@dimen/_12ssp"
                android:textColorHint="@color/black_34"
                android:background="@drawable/item_bg"
                android:backgroundTint="@color/white"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"/>

            <TextView
                android:text="Blood Group Needed"
                android:textSize="@dimen/_12ssp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.skydoves.powerspinner.PowerSpinnerView
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_bg"
                android:backgroundTint="#FFB7B7"
                android:gravity="center"
                android:hint="@string/select_blood_group"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                android:textSize="14.5sp"
                app:spinner_arrow_gravity="end"
                app:spinner_arrow_padding="8dp"
                app:spinner_item_array="@array/blood_groups"
                app:spinner_popup_animation="dropdown"
                app:spinner_popup_background="@color/white"
                app:spinner_popup_elevation="14dp" />

            <TextView
                android:text="@string/location"
                android:textSize="@dimen/_12ssp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:gravity="start"
                android:inputType="text|textMultiLine"
                android:padding="@dimen/_14sdp"
                android:textSize="@dimen/_12ssp"
                android:textColorHint="@color/black_34"
                android:background="@drawable/item_bg"
                android:backgroundTint="#33C4C4C4"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/hospital_name"
                android:textSize="@dimen/_12ssp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:gravity="start"
                android:inputType="text|textMultiLine"
                android:padding="@dimen/_14sdp"
                android:textSize="@dimen/_12ssp"
                android:textColorHint="@color/black_34"
                android:background="@drawable/item_bg"
                android:backgroundTint="#33C4C4C4"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_post"
                android:background="@drawable/item_bg"
                android:text="@string/post"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_32sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</LinearLayout>