<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="@dimen/_200sdp"
    android:layout_height="match_parent">

    <ImageView
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_80sdp"/>

    <LinearLayout
        android:background="?attr/selectableItemBackground"
        android:layout_marginTop="@dimen/_30sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_baseline_home_24"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"/>

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_16sdp"
            android:text="@string/home"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/_14ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:background="?attr/selectableItemBackground"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_baseline_rate_review_24"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"/>

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_16sdp"
            android:text="@string/rate_us"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/_14ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:background="?attr/selectableItemBackground"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_baseline_info_24"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"/>

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_16sdp"
            android:text="@string/about_us"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/_14ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:background="?attr/selectableItemBackground"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_baseline_exit_to_app_24"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"/>

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_16sdp"
            android:text="@string/logout"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/_14ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>