<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragment.ProfileFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="@dimen/_16sdp"
            android:background="@drawable/item_bg"
            android:backgroundTint="@color/white"
            android:layout_margin="@dimen/_16sdp"
            android:elevation="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_alignParentEnd="true"
                android:layout_margin="2dp"
                android:padding="@dimen/_8sdp"
                android:elevation="4dp"
                android:background="@drawable/circle_back"
                android:src="@drawable/ic_edit_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginTop="@dimen/_16sdp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:src="@drawable/simple_man"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"/>

                <TextView
                    android:text="Naimul Islam"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/sample_text"
                    android:textAlignment="center"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="#000000"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_location" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:text="Location: "
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="Shyamoli , Dhaka 1207"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp" />

                </LinearLayout>

                <RelativeLayout
                    android:padding="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/item_bg"
                    android:backgroundTint="#FFB7B7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_centerVertical="true"
                        android:id="@+id/image_blood_drop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_blood_drop" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_toEndOf="@+id/image_blood_drop"
                        android:text="@string/blood_group"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="O+"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_20ssp" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_marginStart="@dimen/_16sdp"
            android:text="@string/activity_log"
            android:textSize="@dimen/_12ssp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:background="@drawable/item_bg"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="4dp"/>

        <LinearLayout
            android:background="@drawable/item_bg"
            android:elevation="2dp"
            android:backgroundTint="@color/white"
            android:layout_margin="@dimen/_16sdp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/time"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/action"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <View
                android:background="@color/theme_color"
                android:layout_width="match_parent"
                android:layout_height="0.5pt"/>

            <LinearLayout
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include layout="@layout/item_activity_log"/>
                <include layout="@layout/item_activity_log"/>
                <include layout="@layout/item_activity_log"/>
                <include layout="@layout/item_activity_log"/>
                <include layout="@layout/item_activity_log"/>
                <include layout="@layout/item_activity_log"/>
                <include layout="@layout/item_activity_log"/>
                <include layout="@layout/item_activity_log"/>
                <include layout="@layout/item_activity_log"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
